// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Address Lookup Address Lookup 1`] = `
<form
  className="relative"
  onSubmit={[Function]}
>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="addressLookupPostcode"
  >
    Postcode
  </label>
  <div
    className="flex"
  >
    <div
      className="w-full mr-4"
    >
      <div
        className="relative"
      >
        <input
          className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500  "
          id="addressLookupPostcode"
          name="addressLookupPostcode"
        />
      </div>
    </div>
    <button
      className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
      type="submit"
    >
      <span
        className="relative flex items-center justify-center truncate"
      >
        Find address
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Alert Alert 1`] = `
<div
  className="p-4  text-white bg-red-600"
>
  <div
    className="flex"
  >
    <div
      className="flex-shrink-0 pr-2"
    >
      <svg
        className="w-5 h-5"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        />
      </svg>
    </div>
    <div
      className="flex-1"
    >
      <strong>
        Basic alert
      </strong>
      <p>
        And a little bit of text...
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Custom Icon 1`] = `
<div
  className="p-4  text-white bg-red-600"
>
  <div
    className="flex"
  >
    <div
      className="flex-shrink-0 pr-2"
    >
      <svg
        className="w-5 h-5"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        />
      </svg>
    </div>
    <div
      className="flex-1"
    >
      <strong>
        Alert with custom icon
      </strong>
      <p>
        And a little bit of text...
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Button 1`] = `
<div
  className="space-x-2"
>
  <button
    className="text-gray-800 border border-gray-300 rounded hover:border-gray-400 active:border-gray-400 relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Button
    </span>
  </button>
  <button
    className="text-gray-800 border border-gray-300 rounded hover:border-gray-400 active:border-gray-400 relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition opacity-50 cursor-not-allowed"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Button With Icon 1`] = `
<div
  className="flex space-x-2"
>
  <button
    className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Button
      <svg
        className="w-3 h-3 ml-1 text-white opacity-50 duration-150 ease-in-out transition"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
        />
      </svg>
    </span>
  </button>
  <button
    className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      <svg
        className="w-3 h-3 mr-1 text-white opacity-50 duration-150 ease-in-out transition"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
        />
      </svg>
      Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Danger Button 1`] = `
<button
  className="text-white bg-red-600 rounded hover:bg-red-700 active:bg-red-700 relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
  onClick={[Function]}
  type="button"
>
  <span
    className="relative flex items-center justify-center truncate"
  >
    Danger
  </span>
</button>
`;

exports[`Storyshots Button Primary Button 1`] = `
<div
  className="space-x-2"
>
  <button
    className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Primary
    </span>
  </button>
  <button
    className="font-semibold text-white rounded bg-sdh-yellow hover:bg-yellow-400 active:bg-yellow-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition opacity-50 cursor-not-allowed"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="relative flex items-center justify-center truncate"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Secondary Button 1`] = `
<button
  className="font-semibold text-gray-500 rounded bg-gray-200 hover:bg-gray-300 active:bg-gray-400  relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
  onClick={[Function]}
  type="button"
>
  <span
    className="relative flex items-center justify-center truncate"
  >
    Secondary
  </span>
</button>
`;

exports[`Storyshots Button Success Button 1`] = `
<button
  className="text-white bg-green-600 rounded hover:bg-green-500 active:bg-green-800 relative px-8 py-3 font-montserrat focus:outline-none duration-150 ease-in-out transition"
  onClick={[Function]}
  type="button"
>
  <span
    className="relative flex items-center justify-center truncate"
  >
    <svg
      className="w-3 h-3 mr-1 text-white opacity-50 duration-150 ease-in-out transition"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      />
    </svg>
    Success
  </span>
</button>
`;

exports[`Storyshots Checkbox Checkbox 1`] = `
<div>
  <div
    className="flex"
  >
    <input
      className="w-8 h-8 mr-3 text-blue-600 rounded outline-none form-checkbox focus:border-blue-500 focus:shadow-none"
      id="checkbox"
      label="Label"
      name="checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="mt-1"
      htmlFor="checkbox"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`Storyshots Date Picker Date Picker 1`] = `
<div>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="date-picker"
    >
      Date Picker
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pr-10"
        data-testid="date-picker-input"
        id="date-picker"
        label="Date Picker"
        name="date-picker"
        onChange={[Function]}
        onMouseDown={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none right-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 64h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V160h352v298c0 3.3-2.7 6-6 6z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Date Picker Max Date 1`] = `
<div>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="date-picker"
    >
      Date Picker
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pr-10"
        data-testid="date-picker-input"
        id="date-picker"
        label="Date Picker"
        max="2099-01-01"
        name="date-picker"
        onChange={[Function]}
        onMouseDown={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none right-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 64h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V160h352v298c0 3.3-2.7 6-6 6z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Date Picker Min Date 1`] = `
<div>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="date-picker"
    >
      Date Picker
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pr-10"
        data-testid="date-picker-input"
        id="date-picker"
        label="Date Picker"
        min="2000-01-01"
        name="date-picker"
        onChange={[Function]}
        onMouseDown={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none right-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 64h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V160h352v298c0 3.3-2.7 6-6 6z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Error Input Error 1`] = `
<div
  className="flex items-center mt-1 text-red-600"
>
  <svg
    className="w-3 h-3"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 512 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    />
  </svg>
  <p
    className="ml-1 text-xs"
  >
    Please provide a valid email
  </p>
</div>
`;

exports[`Storyshots Input Help Input Help 1`] = `
<div
  className="flex items-center mt-1 text-gray-500"
>
  <svg
    className="w-3 h-3"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 512 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    />
  </svg>
  <p
    className="ml-1 text-xs"
  >
    Some help text
  </p>
</div>
`;

exports[`Storyshots Input Input 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="input"
  >
    Name
  </label>
  <div
    className="relative"
  >
    <input
      className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500  "
      id="input"
      label="Name"
      name="input"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Input With Error 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="inputError"
  >
    Input
  </label>
  <div
    className="relative"
  >
    <input
      className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500 text-red-600 border-red-600 focus:border-red-600 "
      id="inputError"
      label="Input"
      name="inputError"
      onChange={[Function]}
    />
  </div>
  <div
    className="flex items-center mt-1 text-red-600"
  >
    <svg
      className="w-3 h-3"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
      />
    </svg>
    <p
      className="ml-1 text-xs"
    >
      Please provide a valid email
    </p>
  </div>
</div>
`;

exports[`Storyshots Input With Icon 1`] = `
<div
  className="space-y-8"
>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="input error"
    >
      Right Icon
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pr-10"
        id="input error"
        label="Right Icon"
        name="input error"
        onChange={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none right-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0 0 68.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div>
    <label
      className="block mb-1 font-extrabold"
      htmlFor="withIcon"
    >
      Left Icon
    </label>
    <div
      className="relative"
    >
      <input
        className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500   pl-10"
        id="withIcon"
        label="Left Icon"
        name="withIcon"
        onChange={[Function]}
      />
      <div
        className="absolute inset-y-0 flex items-center px-3 pointer-events-none left-0"
      >
        <svg
          className="w-4 h-4"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0 0 68.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Basic Label 1`] = `
<label
  className="block mb-1 font-extrabold"
  htmlFor="label"
>
  Label
</label>
`;

exports[`Storyshots Label Required 1`] = `
<label
  className="block mb-1 font-extrabold"
  htmlFor="label"
>
  Label
  <span
    className="text-red-600"
  >
     *
  </span>
</label>
`;

exports[`Storyshots Panel Custom Class 1`] = `
<div
  className="panel bg-blue-50"
>
  <div
    className="p-4 border border-t-0 border-gray-300 rounded-b"
  >
    <div>
      <label
        className="block mb-1 font-extrabold"
        htmlFor="input"
      >
        Input
      </label>
      <div
        className="relative"
      >
        <input
          className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500  "
          id="input"
          label="Input"
          name="input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Panel Panel 1`] = `
<div
  className="panel "
>
  <div
    className="p-4 border border-t-0 border-gray-300 rounded-b"
  >
    <div>
      <label
        className="block mb-1 font-extrabold"
        htmlFor="input"
      >
        Input
      </label>
      <div
        className="relative"
      >
        <input
          className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500  "
          id="input"
          label="Input"
          name="input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Button Radio Button 1`] = `
Array [
  <label
    className="flex items-center"
  >
    <input
      className="absolute invisible"
      label="Option 1"
      onChange={[Function]}
      type="radio"
      value="OptionOne"
    />
    <div
      className="w-8 h-8 border rounded-full"
    />
    <span
      className="ml-3"
    >
      Option 1
    </span>
  </label>,
  <label
    className="flex items-center"
  >
    <input
      checked={true}
      className="absolute invisible"
      label="Option 2"
      onChange={[Function]}
      type="radio"
      value="OptionTwo"
    />
    <div
      className="flex items-center justify-center w-8 h-8 border rounded-full"
    >
      <div
        className="w-4 h-4 bg-blue-600 rounded-full"
      />
    </div>
    <span
      className="ml-3"
    >
      Option 2
    </span>
  </label>,
]
`;

exports[`Storyshots Select Select 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="country"
  >
    Country
  </label>
  <div
    className="relative"
  >
    <select
      className="block w-full form-input rounded text-gray-900 focus:shadow-none focus:border-blue-500 "
      defaultValue=""
      id="country"
      label="Country"
      name="country"
      onChange={[Function]}
    >
      <option
        hidden={true}
        value=""
      >
        Select an option...
      </option>
      <option
        value="Great Britain"
      >
        Great Britain
      </option>
      <option
        value="France"
      >
        France
      </option>
      <option
        value="Spain"
      >
        Spain
      </option>
      <option
        value="Germany"
      >
        Germany
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-3 text-gray-600 pointer-events-none"
    >
      <div>
        <svg
          className="w-4 h-4 -mb-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M288.662 352H31.338c-17.818 0-26.741-21.543-14.142-34.142l128.662-128.662c7.81-7.81 20.474-7.81 28.284 0l128.662 128.662c12.6 12.599 3.676 34.142-14.142 34.142z"
          />
        </svg>
        <svg
          className="w-4 h-4 -mt-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea Textarea 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="textarea"
  >
    Textarea
  </label>
  <textarea
    className="block w-full form-input rounded-none text-gray-900 focus:shadow-none focus:border-blue-500 "
    id="textarea"
    label="Textarea"
    name="textarea"
    onChange={[Function]}
    rows={5}
  />
</div>
`;

exports[`Storyshots Textarea With Error 1`] = `
<div>
  <label
    className="block mb-1 font-extrabold"
    htmlFor="textarea"
  >
    Textarea
  </label>
  <textarea
    className="block w-full form-input rounded-none text-gray-900 focus:shadow-none focus:border-blue-500 text-red-600 border-red-600 focus:border-red-600"
    id="textarea"
    label="Textarea"
    name="textarea"
    onChange={[Function]}
    rows={5}
  />
  <div
    className="flex items-center mt-1 text-red-600"
  >
    <svg
      className="w-3 h-3"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
      />
    </svg>
    <p
      className="ml-1 text-xs"
    >
      Please provide some text
    </p>
  </div>
</div>
`;

exports[`Storyshots Toggle Basic Toggle 1`] = `
<div>
  <label
    className="block text-gray-600"
    htmlFor="toggle1"
  >
    Toggle
    <input
      className="checkbox"
      id="toggle1"
      label="Toggle"
      name="toggle1"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="toggle"
    >
      <span
        className="toggleHandle"
      />
    </div>
  </label>
</div>
`;

exports[`Storyshots Tooltip Tooltip 1`] = `
<div
  aria-describedby={null}
  className="inline-block"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title="Tooltip Message"
>
  <svg
    className="w-4 h-4"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 512 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
    />
  </svg>
</div>
`;
